pdawine.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title:            Dawine Pierre
 tagline:          'Ing. in Rural Engineering, Data Science Specialist, Project Manager'
 description:      'Ing. in Rural Engineering, Data Science Specialist, Project Manager'
 #url:              http://hyde.getpoole.com
-url:              http://ecsi-haiti.com
+url:              http://pdawine.github.io
 baseurl:          /
 
 author:
