--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
+relative_permalinks: true
 
 # Setup
 title:            Dawine Pierre
@@ -21,7 +22,7 @@ author:
 
 paginate:         5
 
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 paginate_path: "page:num"
 
 
