--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:        pretty
 title:            Dawine Pierre
 tagline:          'Ing., Data Scientist, GIS Specialist'
 description:      'Ing., Data Scientist, GIS Specialist'
-url:              http://re-s.org/
+url:              https://pdawine.github.io/
 baseurl:          /
 
 author:
