--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title:            Dawine Pierre
 tagline:          'Ing., Data Scientist, GIS Specialist'
 description:      'Ing., Data Scientist, GIS Specialist'
 url:              https://pdawine.github.io/
-baseurl:          /pdawine.github.io
+baseurl:          /pdawine.github.io/
 
 author:
   name:           'Dawine Pierre'
