--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ permalink:        pretty
 
 # Setup
 title:            Dawine Pierre
-tagline:          'Ing., Data Scientist, GIS Specialist'
-description:      'Ing., Data Scientist, GIS Specialist'
+tagline:          'Rural & Software Engineer, Data Scientist, GIS Specialist'
+description:      'Rural & Software Engineer, Data Scientist, GIS Specialist'
 url:              https://pdawine.github.io/
 baseurl:          /pdawine.github.io/
 
