--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline:          'Rural & Software Engineer, Data Scientist, GIS Specialist'
 description:      'Rural & Software Engineer, Data Scientist, GIS Specialist'
 url:              https://pdawine.github.io/
 # baseurl:          /pdawine.github.io/
-baseurl:          /pdawine.github.io/
+baseurl:          /
 
 author:
   name:           'Dawine Pierre'
