--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Dependencies
-markdown:      redcarpet
-#markdown:     kramdown
+#markdown:      redcarpet
+markdown:     kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 highlighter:      pygments
-#highlighter:  rouge
-highlighter: true
+highlighter:  rouge
+#highlighter: true
 
 
 # Permalinks
