--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ relative_permalinks: true
 title:            Dawine Pierre
 tagline:          'Rural & Software Engineer, Data Scientist, GIS Specialist'
 description:      'Rural & Software Engineer, Data Scientist, GIS Specialist'
-url:               http://dawine.info
+url:               http://sepanda.com
 # baseurl:          /pdawine.github.io/
 baseurl:          /
 
